# Spielwiese

./: .env.example  .gitignore  BAKE_NAVMESH.md  Dockerfile  OPEN_AND_PLAY.md  README.md  README_MVP_SETUP.md  docker-compose.yml  main.py  middleware.ts  package.json  pyproject.toml  tailwind.config.ts
Assets/Scenes/: Scene_MainMenu.unity  Scene_Mission1.unity
Assets/Scripts/AI/: SquadCommander.cs  UnitAI.cs
Assets/Scripts/Core/: GameTeam.cs  Health.cs
Assets/Scripts/Editor/: SetupValidator.cs
Assets/Scripts/Gameplay/: CapturePoint.cs  GameManager.cs
Assets/Scripts/Player/: PlayerController.cs  ThirdPersonCamera.cs
Assets/Scripts/UI/: UIManager.cs
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
prisma/: schema.prisma  seed.ts
prisma/migrations/20260211180000_init/: migration.sql
scripts/: generate-password-hash.mjs
src/: entities.mjs
src/app/: globals.css  layout.tsx
src/app/dashboard/: page.tsx
src/checks/: runChecks.mjs
src/components/: asset-table.tsx  dashboard-shell.tsx  net-worth-chart.tsx  overview-allocation.tsx  sortable-filterable-table.tsx
src/lib/: auth.ts  dashboard-data.ts  env.ts  logger.ts  portfolio-data.ts
src/portfolio/: __init__.py  epx.py  scheduler.py  valuation.py
src/server/: actions.mjs  actions.ts  csv-import.ts  csvImport.mjs
src/ui/: forms.tsx  modalWorkflow.md  ux-notes.md
src/validation/: schemas.mjs  schemas.ts
tests/: test_epx_parser.py  test_scheduler.py  test_valuation.py
tests/fixtures/: epx_standard.html  epx_structure_variation.html
(+29 files in other folders)
